--- a/Prestamos-Activos.html
+++ b/Prestamos-Activos.html
@@ -326,7 +326,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="payments.html" class="nav-link">
+          <a href="Registro-de-Pagos.html" class="nav-link">
             <i class="fas fa-money-bill-wave"></i> Pagos
           </a>
         </li>
@@ -488,7 +488,7 @@
           </div>
           <div class="loan-item-footer">
             <div class="loan-amount">$${loan.balance.toFixed(2)}</div>
-            <a href="payments.html?loanId=${loan.id}" class="btn btn-sm">
+            <a href="Registro-de-Pagos.html?loanId=${loan.id}" class="btn btn-sm">
               <i class="fas fa-money-bill-wave"></i> Registrar Pago
             </a>
           </div>
