--- a/Public-user.html
+++ b/Public-user.html
@@ -21,7 +21,7 @@
       --danger-color: #e74c3c;
       --warning-color: #f39c12;
       --success-color: #2ecc71;
-      --info-color: #3498db;
+      --info-color: #15a086;
       --light-background: #f5f5f5;
       --light-text: #333;
       --light-card: #ffffff;
@@ -404,7 +404,7 @@
     }
 
     .loan-details-btn:hover {
-      background: #2980b9;
+      background: #2c3e50;
     }
 
     .loan-summary-item {
@@ -828,7 +828,7 @@
     }
 
     .btn-info:hover {
-      background: #2980b9;
+      background: #2c3e50;
     }
 
     .receipt-preview {
