--- a/home.html
+++ b/home.html
@@ -609,7 +609,7 @@
     <div class="sidebar-header">
       <div class="logo">Sistema de Préstamos</div>
       <div class="user-profile">
-        <img id="userAvatar" src="https://via.placeholder.com/40" alt="User Avatar" class="user-avatar">
+        <img id="userAvatar" src="logo.png" alt="User Avatar" class="user-avatar">
         <div class="user-info">
           <span id="userName" class="user-name">Usuario</span>
           <span id="userRole" class="user-role">Administrador</span>
@@ -1270,7 +1270,7 @@
           initializeAppData();
         } else {
           // Redirect to login if not authenticated
-          window.location.href = 'login.html';
+          window.location.href = 'index.html';
         }
       });
 
