--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sistema de Préstamos</title>
+  <title>PlusMoney retom</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
@@ -607,7 +607,7 @@
   <!-- Sidebar (Desktop) -->
   <nav class="sidebar">
     <div class="sidebar-header">
-      <div class="logo">Sistema de Préstamos</div>
+      <div class="logo">PlusMoney Retom</div>
       <div class="user-profile">
         <img id="userAvatar" src="logo.png" alt="User Avatar" class="user-avatar">
         <div class="user-info">
