--- a/home.html
+++ b/home.html
@@ -1333,7 +1333,7 @@
           <p>Crear credenciales para clientes</p>
         </div>
         
-        <div class="config-card" onclick="navigateTo('user-settings.html')">
+        <div class="config-card" onclick="navigateTo('adm-user.html')">
           <i class="fas fa-users-cog"></i>
           <h3>Opciones de Usuario</h3>
           <p>Configuración de usuarios y permisos</p>
