--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
       --danger-color: #e74c3c;
       --warning-color: #f39c12;
       --success-color: #2ecc71;
-      --info-color: #3498db;
+      --info-color: #15a086;
       --sidebar-width: 250px;
       --mobile-nav-height: 75px;
     }
@@ -183,14 +183,14 @@
     .mobile-nav .nav-link {
       color: var(--text-light);
       text-decoration: none;
-      padding: 0.8rem;
+      padding: 1.0rem;
       display: flex;
       flex-direction: column;
       align-items: center;
       font-size: 0.64rem;
       font-weight: 600;
       text-transform: uppercase;
-      letter-spacing: 0.5px;
+      letter-spacing: 1.5px;
       transition: all 0.3s ease;
     }
 
@@ -1104,7 +1104,7 @@
                 <input type="text" id="referenceRelation" class="form-control" required>
               </div>
               
-              <!-- Enhanced Document Upload Section -->
+              <!-- Enhanced Document Upload Section --><!--
               <div class="document-upload">
                 <h3>Documentos Adjuntos</h3>
                 <div class="form-group">
@@ -1117,7 +1117,7 @@
                 </div>
                 <div class="document-preview" id="documentPreview"></div>
               </div>
-            </div>
+            </div>-->
 
             <!-- Datos del Préstamo -->
             <div>
