--- a/Public-user.html
+++ b/Public-user.html
@@ -1274,7 +1274,7 @@
                     <div class="settings-option">
                         <label data-lang="app_theme">Tema de la Aplicación</label>
                         <div class="theme-selector">
-                            <div class="theme-option" data-theme="dark" data-lang="dark">Oscuro</div>
+                            <div class="theme-option" data-theme="dark" data-lang="dark">Retom</div>
                             <div class="theme-option" data-theme="light" data-lang="light">Claro</div>
                             <div class="theme-option" data-theme="custom" data-lang="custom">Personalizado</div>
                         </div>
