--- a/Public-user.html
+++ b/Public-user.html
@@ -1291,7 +1291,7 @@
                         </select>
                     </div>
                     <div class="settings-option">
-                      <!--  <label data-lang="notifications">Notificaciones</label>
+                      <label data-lang="notifications">Notificaciones</label>
                         <div class="settings-toggle">
                             <input type="checkbox" id="emailNotifications">
                             <label for="emailNotifications" data-lang="email_notifications">Notificaciones por Email</label>
@@ -1299,7 +1299,7 @@
                         <div class="settings-toggle">
                             <input type="checkbox" id="smsNotifications">
                             <label for="smsNotifications" data-lang="sms_notifications">Notificaciones por SMS</label>
-                        </div>-->
+                        </div>
                     </div>
                     <div class="settings-option">
                         <label data-lang="font_size">Tamaño de Fuente</label>
