--- a/home.html
+++ b/home.html
@@ -1438,7 +1438,7 @@
         </div>
         
         <div class="config-card">
-          <a href="loan-settings.html" style="text-decoration: none; color: inherit;">
+          <a href="Datos-cliente-empresa.html" style="text-decoration: none; color: inherit;">
             <i class="fas fa-cogs"></i>
             <h3>Configuración de Préstamos</h3>
             <p>Parámetros para nuevos préstamos</p>
