--- a/home.html
+++ b/home.html
@@ -1152,6 +1152,11 @@
         <a href="#users" class="nav-link">
           <i class="fas fa-users"></i> Usuarios
         </a>
+      </li>    
+      <li class="nav-item">
+        <a href="Reporte-General.html" class="nav-link">
+          <i class="fas fa-file"></i> Reportes
+        </a>
       </li>
       <li class="nav-item">
         <a href="#config" class="nav-link">
