--- a/home.html
+++ b/home.html
@@ -1154,7 +1154,7 @@
         </a>
       </li>    
       <li class="nav-item">
-        <a href="Reporte-General.html" class="nav-link">
+        <a href="Reporte-General.html">
           <i class="fas fa-file"></i> Reportes
         </a>
       </li>
